Frontend: homepage layout

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,33 +1,63 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+    animation: App-logo-spin infinite 20s linear;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
+}
+
+.ant-layout {
+    height: 100%;
+}
+
+.ant-layout .ant-layout-content {
+    height: 100%;
+    padding-bottom: 50px;
+    background-color: #f4f8fc;
+}
+
+.ant-layout .ant-layout-footer {
+    height: 50px;
+    margin-top: -50px;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.ant-layout .ant-layout-footer hr {
+    margin: 0 15%;
+    width: auto;
+}
+
+.ant-layout .ant-layout-footer p {
+    margin: 0;
+    padding: 8px 0;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
