Frontend: login page

--- a/web/src/assets/Login.less
+++ b/web/src/assets/Login.less
@@ -1,14 +1,14 @@
-.SignUp-Form {
+.Login-Form {
   height: 100%;
 
-  .SignUp-Buttons {
+  .Login-Buttons {
     width: 100%;
 
-    .SignUp-SignUp {
+    .Login-Login {
       margin-right: 10px;
     }
 
-    .SignUp-GoBack {
+    .Login-GoBack {
       margin-left: 10px;
     }
   }
