--- a/web/src/assets/Welcome.less
+++ b/web/src/assets/Welcome.less
@@ -1,9 +1,13 @@
-.Signup {
+.Welcome-Layout {
+  height: 100%;
+
+  .Welcome-SignUp {
     width: 70%;
     margin: 0 15% 5px 15%;
-}
+  }
 
-.Login {
+  .Welcome-Login {
     width: 70%;
     margin: 5px 15% 0 15%;
+  }
 }
